--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<!-- Contact -->
+<!--
 <section id="contact">
 	<div class="inner">
 		<section>
@@ -48,7 +48,7 @@
 					    {{ site.city }},
 					{% endif %}
 					{% if site.state %}
-					    {{ site.state }} 
+					    {{ site.state }}
 					{% endif %}
 					{% if site.zip_code %}
 					    {{ site.zip_code }}<br />
@@ -61,7 +61,7 @@
 			</section>
 		</section>
 	</div>
-</section>
+</section>Contact -->
 
 <!-- Footer -->
 	<footer id="footer">
