--- a/_includes/tiles.html
+++ b/_includes/tiles.html
@@ -1,18 +1,28 @@
-{% if 'posts' == site.tiles-source %}
-    {% assign tiles = site.posts %}
-{% elsif 'pages' == site.tiles-source %}
-    {% assign tiles = site.html_pages | where_exp: "item", "item.show_tile != false" %}
-{% endif %}
 <section id="one" class="tiles">
-  {% for tile in tiles limit:site.tiles-count %}
+  {% for post in site.posts limit:site.tiles-count %}
+  {% if site.tiles-source == 'posts' %}
   <article>
     <span class="image">
-      <img src="{{ tile.image }}" alt="" />
+      <img src="{{ post.image }}" alt="" />
     </span>
     <header class="major">
-      <h3><a href="{{ tile.url  | relative_url }}" class="link">{{ tile.title }}</a></h3>
-      <p>{{ tile.description }}</p>
+      <h3><a href="{{ post.url  | relative_url }}" class="link">{{ post.title }}</a></h3>
+      <p>{{ post.description }}</p>
     </header>
   </article>
+  {% endif %}
+  {% endfor %}
+  {% for page in site.pages limit:site.tiles-count %}
+  {% if site.tiles-source == 'pages' and page.show_tile != false %}
+  <article>
+    <span class="image">
+      <img src="{{ page.image }}" alt="" />
+    </span>
+    <header class="major">
+      <h3><a href="{{ page.url | relative_url  }}" class="link">{{ page.title }}</a></h3>
+      <p>{{ page.description }}</p>
+    </header>
+  </article>
+  {% endif %}
   {% endfor %}
 </section>
